--- a/src/Flair/CoreBundle/Resources/assets/less/buttons.less
+++ b/src/Flair/CoreBundle/Resources/assets/less/buttons.less
@@ -30,7 +30,9 @@
     }
 
     &.orange {
-        background-color: @colorOrange;
+      color: #fff;
+      background-color: #f0ad4e;
+      border-color: #eea236;
 
         &:hover{
             background-color: #FFC435;
@@ -78,14 +80,6 @@
             }
         }
     }
-}
-
-.btn-delete {
-    width: 90px;
-    height: 30px;
-    text-align: center;
-    background: #666;
-    display: block;
 }
 
 .btn-reflate {
