--- a/src/Flair/CoreBundle/Resources/assets/less/header.less
+++ b/src/Flair/CoreBundle/Resources/assets/less/header.less
@@ -1,6 +1,6 @@
 /******************/
 /*    HEADER      */
-/******************/
+/*****************
 header {
     height: 110px;
     padding-top: 40px;
@@ -110,3 +110,4 @@ header {
         border-left: 1px solid black;
     }
 }
+*/
