--- a/src/Flair/CoreBundle/Resources/assets/less/homepage.less
+++ b/src/Flair/CoreBundle/Resources/assets/less/homepage.less
@@ -1,6 +1,6 @@
 /******************/
 /*    HOMEPAGE    */
-/******************/
+/*****************
 
 .hp-presentation {
     text-align: center;
@@ -195,3 +195,4 @@
 //        font-size: 15px;
 //    }
 //}
+*/
