--- a/src/Flair/OrganismeBundle/Resources/views/Reponses/listerEmbedded.html.twig
+++ b/src/Flair/OrganismeBundle/Resources/views/Reponses/listerEmbedded.html.twig
@@ -1,6 +1,6 @@
 <h2 class="title title-table grey">Réponses</h2>
 
-<table class="table">
+<table class="table table-bordered table-reponsive">
     <thead>
         <tr>
             <th width="35%">Société</th>
