--- a/src/Flair/PrestataireBundle/Resources/views/Devis/afficher.html.twig
+++ b/src/Flair/PrestataireBundle/Resources/views/Devis/afficher.html.twig
@@ -1,5 +1,5 @@
 <div id="devis">
-    <table class="table consultation-documents">
+    <table class="table table-bordered consultation-documents">
         <thead>
             <tr>
                 <th>Code</th>
