--- a/src/Flair/PrestataireBundle/Resources/views/Profil/afficher.html.twig
+++ b/src/Flair/PrestataireBundle/Resources/views/Profil/afficher.html.twig
@@ -1,53 +1,60 @@
 {% extends 'FlairPrestataireBundle::profil.html.twig' %}
 
 {% block body %}
-<div class="inner">
+<div class="container">
+  <div class="row">
+      <div class="col-lg-12">
+          <h1 class="page-header">Mon compte
+          </h1>
+          <ol class="breadcrumb">
+              <li><a href="{{url('Homepage')}}">Accueil</a>
+              </li>
+              <li class="active">Mon compte</li>
 
-    <div class="title title-table">
-        <h2 class="left-bar">
-            Mon compte
-        </h2>
-
-        <div class="btn-bar right">
-            <a href="{{ url('flair_user_profil_edit') }}" class="btn orange no-radius"><i class="fa fa-pencil"></i>
- Modifier</a>
-            <a href="{{ url('flair_user_profil_password') }}" class="btn orange no-radius"><i class="fa fa-lock"></i>
- Changer mon mot de passe</a>
-
-            {% if is_granted("ROLE_GESTIONNAIRE") %}
-            <a href="{{ url('flair_user_invitation_list') }}" class="btn orange no-radius"><i class="fa fa-user-plus"></i>
- Invitations</a>
-            {% endif %}
-            <div class="corner"></div>
-        </div>
+              <div class="btn-bar" style="float:right">
+                  <a href="{{ url('flair_user_profil_edit') }}"><i class="fa fa-pencil"></i> |
+   Modifier</a>
+                  <a href="{{ url('flair_user_profil_password') }}"><i class="fa fa-lock"></i> |
+   Changer mon mot de passe</a>
+                  <a href="{{ url('flair_user_invitation_list') }}"><i class="fa fa-user-plus"></i> | Invitations</a>
+                  <div class="corner"></div>
+              </div>
+          </ol>
+      </div>
+  </div>
+  <div class='row'>
+    <div class="col-lg-12">
+      <div class="titleprghp">
+        <span class="prg">Informations du compte</span>
+      </div>
     </div>
-
-    <div class="account-infos">
+  </div>
+    <div class="col-lg-6">
         <div class="left-infos">
             <div class="line-show clearfix">
-                <span class="title">Adresse email</span>
+                <span class="title">Adresse email :</span>
                 <span>{{ utilisateur.email }}</span>
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Contact</span>
+                <span class="title">Contact :</span>
                 <span>{{ utilisateur.nomComplet }}</span>
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Nom</span>
+                <span class="title">Nom :</span>
                 <span>{{ utilisateur.nom }}</span>
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Catégorie</span>
+                <span class="title">Catégorie :</span>
                 <span>
                     {{ utilisateur.categorie }}
                 </span>
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Adresse</span>
+                <span class="title">Adresse :</span>
                 <span>
                     {{ utilisateur.adresse }}<br>
                     {{ utilisateur.complementAdresse }}<br/>
@@ -56,7 +63,7 @@
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Complément d'adrese</span>
+                <span class="title">Complément d'adrese :</span>
                 <span>
                     {{ utilisateur.complementAdresse }}<br>
                     {{ utilisateur.codePostal }} {{ utilisateur.ville }}
@@ -64,27 +71,27 @@
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Périmètre d'intervention</span>
+                <span class="title">Périmètre d'intervention :</span>
                 <span>{{ utilisateur.perimetreIntervention | capitalize }}</span>
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Date de création</span>
+                <span class="title">Date de création :</span>
                 <span>{{ utilisateur.dateCreation | date('d-m-Y') }}</span>
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Téléphone</span>
+                <span class="title">Téléphone :</span>
                 <span>{{ utilisateur.telephone }}</span>
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Mobile</span>
+                <span class="title">Mobile :</span>
                 <span>{{ utilisateur.mobile }}</span>
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Mots clés</span>
+                <span class="title">Mots clés :</span>
                 <span>
                     {% for tag in utilisateur.tags %}
                         {{ tag.name }}{% if not loop.last %},{% endif %}
@@ -92,36 +99,37 @@
                 </span>
             </div>
         </div>
-
+      </div>
+      <div class="col-lg-6">
         <div class="right-infos">
             <div class="line-show clearfix">
-                <span class="title">SIRET</span>
+                <span class="title">SIRET :</span>
                 <span>{{ utilisateur.siret }}</span>
             </div>
 
 
             <div class="line-show clearfix">
-                <span class="title">SIREN</span>
+                <span class="title">SIREN :</span>
                 <span>{{ utilisateur.siren }}</span>
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">APE</span>
+                <span class="title">APE :</span>
                 <span>{{ utilisateur.ape }}</span>
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Références</span>
+                <span class="title">Références :</span>
                 <span>{{ utilisateur.refs }}</span>
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Présentation</span>
+                <span class="title">Présentation :</span>
                 <span>{{ utilisateur.presentation }}</span>
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Attestation URSSAF</span>
+                <span class="title">Attestation URSSAF :</span>
                 {% if utilisateur.urssaf is not null %}
                     <span data-filename="{{ utilisateur.urssaf.filename }}">
                         <a target="_blank" href="{{ vich_uploader_asset(utilisateur.urssaf, 'document') }}">Visualiser</a>
@@ -132,7 +140,7 @@
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Attestation impôts</span>
+                <span class="title">Attestation impôts :</span>
                 {% if utilisateur.impots is not null %}
                     <span data-filename="{{ utilisateur.impots.filename }}">
                         <a target="_blank" href="{{ vich_uploader_asset(utilisateur.impots, 'document') }}">Visualiser</a>
@@ -143,7 +151,7 @@
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Extrait KBIS</span>
+                <span class="title">Extrait KBIS :</span>
                 {% if utilisateur.kbis is not null %}
                     <span data-filename="{{ utilisateur.kbis.filename }}">
                         <a target="_blank" href="{{ vich_uploader_asset(utilisateur.kbis, 'document') }}">Visualiser</a>
@@ -154,7 +162,7 @@
             </div>
 
             <div class="line-show clearfix">
-                <span class="title">Autre document</span>
+                <span class="title">Autre document :</span>
                 {% if utilisateur.presentationDoc is not null %}
                     <span data-filename="{{ utilisateur.presentationDoc.filename }}">
                         <a target="_blank" href="{{ vich_uploader_asset(utilisateur.presentationDoc, 'document') }}">Visualiser</a>
