--- a/src/Flair/UserBundle/Resources/views/Services/lister.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Services/lister.html.twig
@@ -1,62 +1,64 @@
 {% extends 'FlairOrganismeBundle::services.html.twig' %}
 
 {% block body %}
-<div class="inner">
-
-    <div class="title title-table">
-        <h2 class="left-bar">
-            Mes services
-        </h2>
-
-        <div class="btn-bar right">
-            <div class="corner"></div>
-        </div>
+<!-- Page Content -->
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Mes services
+      </h1>
+      <ol class="breadcrumb">
+        <li><a href="{{url('Homepage')}}">Accueil</a>
+        </li>
+        <li class="active">Mes services</li>
+      </ol>
     </div>
+  </div>
+  <div class="mainbox col-md-12">
+    <br>
+    <table class="table table-bordered table-stripped" id="myTable" style="text-align:center">
+    <thead>
+        <th width="30%">Nom</th>
+        <th width="40%">Contact</th>
+        {% if is_granted("ROLE_GESTIONNAIRE") %}
+        <th width="20%">Action</th>
+        {% endif %}
+    </thead>
 
-    <div class="listing-services">
-        <form action="" method="POST" class="services-filter">
-            <div class="filter filter-chozen">
-               {# {{ form_label(form.statut) }}
-                {{ form_widget(form.statut) }} #}
-            </div>
-        </form>
-
-        <table class="table datatable">
-            <thead>
-                <th width="30%">Nom</th>
-                <th width="40%">Contact</th>
-                {% if is_granted("ROLE_GESTIONNAIRE") %}
-                <th width="20%">Action</th>
-                {% endif %}
-            </thead>
-
-            <tbody class="large">
-                {% for service in services %}
-                    {% if service.id != app.user.id %}
-                    <tr data-url="{{ url('flair_user_service_see', {'id' : service.id } ) }}">
-                        <td>{{ service.nom }}</td>
-                        <td>
-                            TEL: {{ service.telephone}}<br/>
-                            MOBILE: {{ service.mobile }}<br/>
-                            EMAIL: {{ service.email}}
-                        </td>
-                        {% if is_granted("ROLE_GESTIONNAIRE") %}
-                        <td class="serv-list">
-                            <a href="{{ url('flair_user_service_edit', {'id' : service.id } ) }}" class="btn-delete">modifier</a>
-                        </td>
-                        {% endif %}
-                    </tr>
-                    {% endif %}
-                {% endfor %}
-                {% if services|length == 1 %}
-                    <tr>
-                        <td colspan="{{ is_granted("ROLE_GESTIONNAIRE") ? 3 : 2 }}">Aucun service</td>
-                    </tr>
-                {% endif %}
-            </tbody>
-        </table>
-    </div>
+      <tbody>
+      <tbody class="large">
+          {% for service in services %}
+              {% if service.id != app.user.id %}
+              <tr data-url="{{ url('flair_user_service_see', {'id' : service.id } ) }}">
+                  <td>{{ service.nom }}</td>
+                  <td>
+                      TEL: {{ service.telephone}}<br/>
+                      MOBILE: {{ service.mobile }}<br/>
+                      EMAIL: {{ service.email}}
+                  </td>
+                  {% if is_granted("ROLE_GESTIONNAIRE") %}
+                  <td class="serv-list">
+                      <a href="{{ url('flair_user_service_edit', {'id' : service.id } ) }}" class="btn-delete">modifier</a>
+                  </td>
+                  {% endif %}
+              </tr>
+              {% endif %}
+          {% endfor %}
+          {% if services|length == 1 %}
+              <tr>
+                  <td colspan="{{ is_granted("ROLE_GESTIONNAIRE") ? 3 : 2 }}">Vous n'avez aucun service</td>
+              </tr>
+          {% endif %}
+      </tbody>
+    </table>
+  </div>
 </div>
+</div>
+</div>
+
+</div>
+
+
 {% endblock %}
 
 
