--- a/app/Resources/views/menu/organisme.html.twig
+++ b/app/Resources/views/menu/organisme.html.twig
@@ -1,19 +1,47 @@
-<div class="menu_container clearfix">
-    <ul>
-        <li class="first {% if active == constant('Flair\\OrganismeBundle\\FlairOrganismeBundle::CONSULTATIONS') %}current{% endif %}">
-            <a href="{{ url('Organisme_consultations') }}">Mes consultations</a>
-        </li>
+{% block menu %}
+<!-- Navigation -->
+{% if  is_granted('ROLE_USER') %}
+<nav class="navbar navbar-inverse navbar-fixed-top menuCo" role="navigation">
 
-        <li class="{% if active == constant('Flair\\OrganismeBundle\\FlairOrganismeBundle::PRESTATAIRES') %}current{% endif %}">
-            <a href="{{ url('Organisme_prestataires') }}">Mes prestataires</a>
-        </li>
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header menuCoNav">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand last {% if active == constant('Flair\\OrganismeBundle\\FlairOrganismeBundle::MON_COMPTE') %}current{% endif %}" href="{{ url('flair_user_profil_see') }}"><i class="fa fa-user"></i> {{ app.user.nom }}</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+            <li class="first {% if active == constant('Flair\\OrganismeBundle\\FlairOrganismeBundle::CONSULTATIONS') %}current{% endif %}">
+                <a href="{{ url('Organisme_consultations') }}">Mes consultations</a>
+            </li>
 
-        <li class="{% if active == constant('Flair\\OrganismeBundle\\FlairOrganismeBundle::SERVICES') %}current{% endif %}">
-            <a href="{{ url('flair_user_service_list') }}">Mes services</a>
-        </li>
+            <li class="{% if active == constant('Flair\\OrganismeBundle\\FlairOrganismeBundle::PRESTATAIRES') %}current{% endif %}">
+                <a href="{{ url('Organisme_prestataires') }}">Mes prestataires</a>
+            </li>
 
-        <li class="last {% if active == constant('Flair\\OrganismeBundle\\FlairOrganismeBundle::MON_COMPTE') %}current{% endif %}">
-            <a href="{{ url('flair_user_profil_see') }}">Mon compte</a>
-        </li>
-    </ul>
-</div>
+            <li class="{% if active == constant('Flair\\OrganismeBundle\\FlairOrganismeBundle::SERVICES') %}current{% endif %}">
+                <a href="{{ url('flair_user_service_list') }}">Mes services</a>
+            </li>
+
+            <li>
+                <a href="{{ url('flair_user_invitation_list') }}">Mes invitations</a>
+            </li>
+
+            <li>
+                <a href="{{ url('logout') }}">Déconnexion</a>
+            </li>
+
+        </ul>
+
+        </div>
+        <!-- /.navbar-collapse -->
+
+    <!-- /.container -->
+</nav>
+{% endif %}
+{% endblock%}
