--- a/src/Flair/CoreBundle/Resources/assets/less/footer.less
+++ b/src/Flair/CoreBundle/Resources/assets/less/footer.less
@@ -1,6 +1,6 @@
 /**************************/
 /*        FOOTER          */
-/**************************/
+/*************************
 footer {
     position: relative;
     bottom: 0px;
@@ -59,3 +59,4 @@ footer {
         color: @colorGreyTextFooter;
     }
 }
+*/
