--- a/src/Flair/CoreBundle/Resources/assets/less/variable.less
+++ b/src/Flair/CoreBundle/Resources/assets/less/variable.less
@@ -1,8 +1,8 @@
 @colorLightGrey: #646462;
 @colorMiddleGrey: #ababab;
 @colorStrongGrey: rgb(102, 102, 102);
-@colorOrange: rgb(255, 151, 53);
-@colorLightOrange: rgb(255,169,53);
+@colorOrange: #f0ad4e;
+@colorLightOrange: #eea236;
 @colorPink: #E73469;
 @colorRed: #ea1c00;
 @colorGreen: #3fb44f;
