--- a/src/Flair/OrganismeBundle/Resources/views/Prestataires/afficher.html.twig
+++ b/src/Flair/OrganismeBundle/Resources/views/Prestataires/afficher.html.twig
@@ -1,20 +1,25 @@
 {% extends 'FlairOrganismeBundle::prestataires.html.twig' %}
 
 {% block body %}
-<div class="inner">
+    <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+              <h1 class="page-header">Mes prestataires</h1>
+              <ol class="breadcrumb">
+                  <li><a href="{{url('Homepage')}}">Accueil</a></li>
+                  <li>Mes prestataires</li>
+                  <li class="active">{{ prestataire.nom }}</li>
 
-    <div class="title title-table">
-        <h2 class="left-bar">
-            {{ prestataire.nom }}
-        </h2>
-
-        <div class="btn-bar right">
-            <a onClick="window.history.go(-1);" class="btn orange no-radius">
-            <i class="fa fa-undo"></i>
- Retour</a>
-            <div class="corner"></div>
-        </div>
-    </div>
+                  <div class="btn-bar" style="float:right">
+                  <a onClick="window.history.go(-1);">
+                  <i class="fa fa-undo"></i>
+                  Retour
+                  </a>
+                    <div class="corner"></div>
+                  </div>
+              </ol>
+          </div>
+      </div>
 
         <div class="account-infos">
         <div class="left-infos">
