--- a/src/Flair/OrganismeBundle/Resources/views/Profil/afficher.html.twig
+++ b/src/Flair/OrganismeBundle/Resources/views/Profil/afficher.html.twig
@@ -1,24 +1,37 @@
     {% extends 'FlairOrganismeBundle::profil.html.twig' %}
 
 {% block body %}
-<div class="inner">
-    <div class="modify-account">
-        <div class="title title-table">
-            <h2 class="left-bar">
-                Mon compte
-            </h2>
+<div class="container">
+  <div class="row">
+      <div class="col-lg-12">
+          <h1 class="page-header">Mon compte
+          </h1>
+          <ol class="breadcrumb">
+              <li><a href="{{url('Homepage')}}">Accueil</a>
+              </li>
+              <li class="active">Mon compte</li>
 
-            <div class="btn-bar right">
-                <a href="{{ url('flair_user_profil_edit') }}" class="btn orange no-radius"><i class="fa fa-pencil"></i>
- Modifier</a>
-                <a href="{{ url('flair_user_profil_password') }}" class="btn orange no-radius"><i class="fa fa-lock"></i>
- Changer mon mot de passe</a>
-                <a href="{{ url('flair_user_invitation_list') }}" class="btn orange no-radius"><i class="fa fa-user-plus"></i> Invitations</a>
-                <div class="corner"></div>
-            </div>
-        </div>
-
+              <div class="btn-bar" style="float:right">
+                  <a href="{{ url('flair_user_profil_edit') }}"><i class="fa fa-pencil"></i> |
+   Modifier</a>
+                  <a href="{{ url('flair_user_profil_password') }}"><i class="fa fa-lock"></i> |
+   Changer mon mot de passe</a>
+                  <a href="{{ url('flair_user_invitation_list') }}"><i class="fa fa-user-plus"></i> | Invitations</a>
+                  <div class="corner"></div>
+              </div>
+          </ol>
+      </div>
+  </div>
         <div class="account-infos">
+          <div class='row'>
+            <div class="col-lg-12">
+              <div class="titleprghp">
+                <span class="prg">Informations du compte</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
             <div class="left-infos">
                 <div class="line-show clearfix">
                     <span class="title">Nom</span>
@@ -53,7 +66,8 @@
                     <span>{{ utilisateur.mobile }}</span>
                 </div>
             </div>
-
+            </div>
+            <div class="col-lg-6">
             <div class="right-infos">
 
                 <div class="line-show clearfix">
@@ -81,12 +95,17 @@
                     <span>{{ utilisateur.rna }}</span>
                 </div>
             </div>
+            </div>
         </div>
 
         <div class="stats">
-            <div class="line-show clearfix">
-                <span class="title">Statistiques</span>
+        <div class='row'>
+          <div class="col-lg-12">
+            <div class="titleprghp">
+              <span class="prg">Statistiques</span>
             </div>
+          </div>
+        </div>
 
             <ul>
                 <li>Nombre de consultations : {{ nbConsult }} </li>
