--- a/src/Flair/OrganismeBundle/Resources/views/Profil/modifier.html.twig
+++ b/src/Flair/OrganismeBundle/Resources/views/Profil/modifier.html.twig
@@ -1,20 +1,26 @@
 {% extends 'FlairOrganismeBundle::profil.html.twig' %}
 
 {% block body %}
-<div class="inner">
+    <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+              <h1 class="page-header">Mon compte
+              </h1>
+              <ol class="breadcrumb">
+                  <li><a href="{{url('Homepage')}}">Accueil</a>
+                  </li>
+                  <li class="active">Modification du compte</li>
 
-    <div class="title title-table">
-        <h2 class="left-bar">
-            Modifier mon compte
-        </h2>
-        <div class="btn-bar right">
-            <a href="{{ url('flair_user_profil_see') }}" class="btn orange no-radius"><i class="fa fa-undo"></i> Retour</a>
-            <div class="corner"></div>
-        </div>
-    </div>
-
+                  <div class="btn-bar" style="float:right">
+                        <a href="{{ url('flair_user_profil_see') }}"><i class="fa fa-undo"></i> Retour</a>
+                      <div class="corner"></div>
+                  </div>
+              </ol>
+          </div>
+      </div>
     <div class="prefix_1">
         <form action="{{ url('flair_user_profil_edit') }}" method="post" class="form-horizontal">
+          <div class="col-lg-6">
             <div class="form-cpt">
                 {{ form_row(form.email) }}
                 {{ form_row(form.nom) }}
@@ -27,6 +33,8 @@
                 </div>
                 {{ form_row(form.ape) }}
             </div>
+          </div>
+          <div class="col-lg-6">
             <div class="form-cpt">
                 {{ form_row(form.prenomContact) }}
                 {{ form_row(form.nomContact) }}
@@ -37,6 +45,7 @@
                 {{ form_row(form.telephone) }}
                 {{ form_row(form.mobile) }}
             </div>
+          </div>
             {{ form_rest(form) }}
 
             <div class="control-group bt_form_row">
