--- a/src/Flair/OrganismeBundle/Resources/views/Reponses/afficher.html.twig
+++ b/src/Flair/OrganismeBundle/Resources/views/Reponses/afficher.html.twig
@@ -3,20 +3,27 @@
 {% set ANSWERED = constant('Flair\\CoreBundle\\Entity\\Reponse::ANSWERED') %}
 
 {% block body %}
-    <div class="inner">
-        <div class="title title-table">
-            <h2 class="left-bar">
-                Consultation : {{ reponse.consultation.titre }}
-            </h2>
+<div class="container">
+  <div class="row">
+      <div class="col-lg-12">
+          <h1 class="page-header">Mes consultations
+          </h1>
+          <ol class="breadcrumb">
+              <li><a href="{{url('Homepage')}}">Accueil</a></li>
+              <li><a href="{{url('Organisme_consultations')}}">Mes consultations</a></li>
+              <li class="active">Consultation : {{ reponse.consultation.titre }}</li>
 
-            <div class="btn-bar right">
-                <a href="{{ url('Organisme_consultations') }}" class="btn orange no-radius">
-                <i class="fa fa-undo"></i>
-                    Retour à la liste
-                </a>
-                <div class="corner"></div>
-            </div>
-        </div>
+
+              <div class="btn-bar" style="float:right">
+                  <a href="{{ url('Organisme_consultations') }}">
+                  <i class="fa fa-undo"></i>
+                      Retour à la liste
+                  </a>
+                  <div class="corner"></div>
+              </div>
+          </ol>
+      </div>
+  </div>
 
         {% set vars = { 'consultation' : reponse.consultation, 'step' : 3 } %}
 
