--- a/src/Flair/PrestataireBundle/Resources/views/Profil/modifier.html.twig
+++ b/src/Flair/PrestataireBundle/Resources/views/Profil/modifier.html.twig
@@ -1,20 +1,27 @@
 {% extends 'FlairPrestataireBundle::profil.html.twig' %}
 
 {% block body %}
-<div class="inner">
+<div class="container">
+  <div class="row">
+      <div class="col-lg-12">
+          <h1 class="page-header">Mon compte
+          </h1>
+          <ol class="breadcrumb">
+              <li><a href="{{url('Homepage')}}">Accueil</a>
+              </li>
+              <li class="active">Modification du compte</li>
 
-    <div class="title title-table">
-        <h2 class="left-bar">
-            Modifier mon compte
-        </h2>
-        <div class="btn-bar right">
-            <a href="{{ url('flair_user_profil_see') }}" class="btn orange no-radius">Retour</a>
-            <div class="corner"></div>
-        </div>
-    </div>
+              <div class="btn-bar" style="float:right">
+                    <a href="{{ url('flair_user_profil_see') }}"><i class="fa fa-undo"></i> Retour</a>
+                  <div class="corner"></div>
+              </div>
+          </ol>
+      </div>
+  </div>
 
     <div class="prefix_1">
         <form method="POST" class="form-horizontal" {{ form_enctype(form) }} id="profil">
+          <div class="col-lg-6">
             {{ form_row(form.email) }}
             {{ form_row(form.nom) }}
             {{ form_row(form.dateCreation) }}
@@ -38,6 +45,8 @@
             <div class="controls" style="margin-bottom: 20px;">
                 <i style="display:block; text-align:justify;width:250px;">Cette liste de mots clés servira à vous référencer sur le moteur de recherche de la plateforme, soyez précis.</i>
             </div>
+            </div>
+            <div class="col-lg-6">
             {{ form_row(form.siret) }}
             {{ form_row(form.ape) }}
             {{ form_row(form.tvaIntracommunautaire) }}
@@ -47,7 +56,7 @@
             {{ form_row(form.codePostal) }}
             {{ form_row(form.telephone) }}
             {{ form_row(form.mobile) }}
-  
+
             <div class="control-group">
                 {{ form_label(form.urssaf) }}
                 <div class="controls file-input">
@@ -80,8 +89,11 @@
                 </div>
             </div>
 
-            {{ form_widget(form._token) }}
 
+            {{ form_widget(form._token) }}
+                <br>
+                <br>
+                <br>
                 <div class="controls">
                     <a href="{{ url('flair_user_profil_see') }}" class="btn">Annuler</a>
                     <input type="submit" id="submitForm" class="btn orange" value="Enregistrer" />
