--- a/src/Flair/PrestataireBundle/Resources/views/Reponses/lister.html.twig
+++ b/src/Flair/PrestataireBundle/Resources/views/Reponses/lister.html.twig
@@ -5,15 +5,22 @@
 {% set ANSWERED = constant('Flair\\CoreBundle\\Entity\\Reponse::ANSWERED') %}
 
 {% block body %}
-<div class="inner">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Mes propositions</h1>
+            <ol class="breadcrumb">
+                <li><a href="{{url('Homepage')}}">Accueil</a></li>
 
-    <div class="title title-table">
-        <h2 class="left-bar">
-            Mes propositions
-        </h2>
 
-        <div class="btn-bar right">
-            <div class="corner"></div>
+                <div class="btn-bar" style="float:right">
+                <a onClick="window.history.go(-1);" >
+                <i class="fa fa-undo"></i>
+                    Annuler
+                </a>
+                  <div class="corner"></div>
+                </div>
+            </ol>
         </div>
     </div>
 
