--- a/src/Flair/UserBundle/Resources/views/Inscription/inscriptionPrestataire.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Inscription/inscriptionPrestataire.html.twig
@@ -14,17 +14,17 @@
 {% endblock %}
 
 {% block body %}
-<div class="inner">
-    <div class="prefix_1">
-        <div class="title title-table">
-            <h2 class="left-bar">
-                Devenir prestataire
-            </h2>
-            <div class="btn-bar right">
-                <div class="corner"></div>
-            </div>
-        </div>
-
+        <div class="container">
+          <div class="row">
+              <div class="col-lg-12">
+                  <h1 class="page-header">Inscription</h1>
+                  <ol class="breadcrumb">
+                      <li><a href="{{url('Homepage')}}">Accueil</a></li>
+                      <li>Devenir prestataire</li>
+                  </ol>
+              </div>
+          </div>
+        <div class="col-lg-12">
         <p style="width: 1080px; font-size: 14px;">L’application mise en concurrence vous permet de répondre simplement et rapidement en ligne, de suivre vos propositions et de développer votre clientèle. En effet, une fois référencée vous pouvez être sollicité par l’ensemble de la communauté des acheteurs.</p>
 
         {{ form_errors(form) }}
@@ -33,8 +33,14 @@
 
             {{ form_row(form.email) }}
             {{ form_row(form.password) }}
-
-            <h2 class="information">Informations sur l'entreprise</h2>
+            <div class='row'>
+              <div class="col-lg-12">
+                <div class="titleprghp">
+                  <span class="prg">Information sur sur l'entreprise</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
             {{ form_row(form.nom) }}
             {{ form_row(form.dateCreation) }}
             {{ form_row(form.siren) }}
@@ -43,19 +49,15 @@
             {{ form_row(form.adresse) }}
             {{ form_row(form.complementAdresse) }}
 
-            <div class="control-group toggleShow">
-                    <div class="information">Suite</div>
-                    <div class="ui-icon ui-icon-circle-arrow-s">
-                    </div>
-            </div>
 
-            <div class="moreFields hide">
                {{ form_row(form.presentation) }}
                 {{ form_row(form.refs) }}
                 {{ form_row(form.tags, { 'attr': {'class': 'tag-select hide', 'multiple': 'multiple'}}) }}
                 <div class="controls" style="margin-bottom: 20px;">
                     <i style="display:block; text-align:justify;width:250px;">Cette liste de mots clés servira à vous référencer sur le moteur de recherche de la plateforme, veuillez être le plus précis possible.</i>
                 </div>
+              </div>
+              <div class="col-lg-6">
                 {{ form_row(form.siret) }}
                 {{ form_row(form.ape) }}
                 {{ form_row(form.tvaIntracommunautaire) }}
@@ -98,12 +100,12 @@
                     </div>
                 </div>
             </div>
-
+            </div>
             {{ form_row(form.cgu) }}
 
             {{ form_widget(form._token) }}
 
-            <div class="controls">
+            <div class="controls" style="float:right">
                 <input type="submit" id="submitForm" value="S'inscrire" class="btn orange" />
             </div>
 
@@ -118,7 +120,7 @@
                 {% endfor %}
             </div>
         </form>
-
+        </div>
     </div>
 </div>
 {% endblock body %}
