--- a/src/Flair/UserBundle/Resources/views/Invitation/inviter.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Invitation/inviter.html.twig
@@ -1,22 +1,25 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-<div class="inner">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+              <h1 class="page-header">Mes prestataires</h1>
+              <ol class="breadcrumb">
+                  <li><a href="{{url('Homepage')}}">Accueil</a></li>
+                  <li>Inviter un utilisateur</li>
 
-    <div class="title title-table">
-        <h2 class="left-bar">
-		    Inviter un utilisateur
-        </h2>
-
-        <div class="btn-bar right">
-            <a onClick="window.history.go(-1);" class="btn orange no-radius">
-            <i class="fa fa-undo"></i>
-                Annuler
-            </a>
-            <div class="corner"></div>
-        </div>
-    </div>
-
+                  <div class="btn-bar" style="float:right">
+                  <a onClick="window.history.go(-1);" >
+                  <i class="fa fa-undo"></i>
+                      Annuler
+                  </a>
+                    <div class="corner"></div>
+                  </div>
+              </ol>
+          </div>
+      </div>
+    <div class="col-lg-6">
     <form action="{{ url('flair_user_invitation_send') }}" method="POST" class="form-horizontal">
         {{ form_rest(form) }}
 
@@ -25,6 +28,6 @@
             <a onClick="window.history.go(-1);" class="btn">Annuler</a>
         </div>
     </form>
-
+    </div>
 </div>
 {% endblock %}
