--- a/src/Flair/UserBundle/Resources/views/Invitation/lister.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Invitation/lister.html.twig
@@ -1,24 +1,26 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-<div class="inner">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Mes invitations</h1>
+            <ol class="breadcrumb">
+                <li><a href="{{url('Homepage')}}">Accueil</a></li>
+                <li>Liste des invitations</li>
 
-    <div class="title title-table">
-        <h2 class="left-bar">
-		    Liste des invitations
-        </h2>
-
-        <div class="btn-bar right">
-            <a href="{{ url('flair_user_invitation_send') }}" class="btn orange no-radius"><i class="fa fa-user-plus"></i> Inviter</a>
-            <a onClick="window.history.go(-1);" class="btn orange no-radius">
-            <i class="fa fa-undo"></i>
-                Annuler
-            </a>
-            <div class="corner"></div>
+                <div class="btn-bar" style="float:right">
+                <a onClick="window.history.go(-1);" >
+                <i class="fa fa-undo"></i>
+                    Annuler
+                </a>
+                  <div class="corner"></div>
+                </div>
+            </ol>
         </div>
     </div>
 
-    <table class="table datatable">
+    <table class="table datatable table-reponsive table-bordered">
         <thead>
             <th>Nom</th>
             <th>Email</th>
