--- a/src/Flair/UserBundle/Resources/views/Profil/motdepasse.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Profil/motdepasse.html.twig
@@ -8,24 +8,30 @@
 
 
 {% block body %}
-<div class="inner">
 
-    <div class="title title-table">
-        <h2 class="left-bar">
-            Changer le mot de passe
-        </h2>
-        <div class="btn-bar right">
-            <a href="{{ url('flair_user_profil_see') }}" class="btn orange no-radius"><i class="fa fa-undo"></i> Retour</a>
-            <div class="corner"></div>
-        </div>
-    </div>
+    <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+              <h1 class="page-header">Mon compte
+              </h1>
+              <ol class="breadcrumb">
+                  <li><a href="{{url('Homepage')}}">Accueil</a>
+                  </li>
+                  <li class="active">Modification du mot de passe</li>
 
+                  <div class="btn-bar" style="float:right">
+                    <a href="{{ url('flair_user_profil_see') }}"><i class="fa fa-undo"></i> Retour</a>
+                      <div class="corner"></div>
+                  </div>
+              </ol>
+          </div>
+      </div>
     <form action="{{ url('flair_user_profil_password') }}" method="post" class="form-horizontal">
         {{ form_rest(form) }}
 
         <div class="controls">
-            <a href="{{ url('flair_user_profil_see') }}" class="btn">Annuler</a>
-            <input class="btn orange" name="publier" type="submit" value="Enregistrer" />
+            <a href="{{ url('flair_user_profil_see') }}" class="btn btn-warning">Annuler</a>
+            <input class="btn btn-success" name="publier" type="submit" value="Enregistrer" />
         </div>
     </form>
 </div>
