--- a/src/Flair/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Security/login.html.twig
@@ -1,53 +1,81 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-<div class="inner">
-    <div class="prefix_1">
-        <div class="title title-table">
-            <h2 class="left-bar">
-                Connexion
-            </h2>
 
-            <div class="btn-bar right">
-                <a href="{{ url('Homepage') }}" class="btn orange no-radius"><i class="fa fa-undo"></i> Retour</a>
-                <div class="corner"></div>
-            </div>
-        </div>
+<!-- Page Content -->
+<div class="container">
+  <div class="row">
+      <div class="col-lg-12">
+          <h1 class="page-header">Connexion
+          </h1>
+          <ol class="breadcrumb">
+              <li><a href="{{ url('Homepage') }}">Accueil</a>
+              </li>
+              <li class="active">Connexion</li>
+          </ol>
+      </div>
+  </div>
+  <div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-info" >
+      <div class="panel-heading">
+        <div class="panel-title">Connexion</div>
+        <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="{{ url('flair_user_password_forget') }}">Mot de passe oublié ?</a></div>
+      </div>
+
+      <div style="padding-top:30px" class="panel-body" >
+      {% if error is defined and error is not null %}
+          <div class="alert alert-danger col-sm-12">
+              <p>Le nom d'utilisateur et le mot de passe ne correspondent pas</p>
+          </div>
+      {% endif %}
+
 
         <form class="form-horizontal" id="login-form" action="{{ url('login_check') }}" method="post">
 
-            {% if error is defined and error is not null %}
-                <div class="error">
-                    <p>Le nom d'utilisateur et le mot de passe ne correspondent pas</p>
-                </div>
-            {% endif %}
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="fa fa-user"></i></span>
+            <input id="login-username" type="text" class="form-control" name="_username" value="{{ last_username }}" placeholder="Email" required>
+          </div>
 
-            <div class="control-group">
-                <label class="control-label required" for="username">Email :</label>
-                <div class="controls">
-                    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required">
-                </div>
-            </div>
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+            <input id="password" type="password" class="form-control" name="_password" placeholder="Mot de passe" required>
+          </div>
 
-            <div class="control-group">
-                <label class="control-label required" for="password">Mot de passe :</label>
-                <div class="controls">
-                    <input type="password" id="password" name="_password" required="required">
-                </div>
-            </div>
 
-            <div class="control-group">
-                <label class="control-label" for="remember_me">Se souvenir de moi</label>
-                <div class="controls">
-                    <input type="checkbox" id="remember_me" name="_remember_me" value="on">
-                </div>
-            </div>
 
-            <div class="controls">
-                <input type="submit" id="_submit" class="btn orange" name="_submit" value="Connexion">
-                <a class="btn" href="{{ url('flair_user_password_forget') }}">Mot de passe oublié ?</a>
+          <div class="input-group">
+            <div class="checkbox">
+              <label>
+                <input id="remember_me" type="checkbox" name="_remember_me" value="on"> Se souvenir de moi
+
+              </label>
             </div>
+          </div>
+
+
+          <div style="margin-top:10px" class="form-group">
+            <!-- Button -->
+
+            <div  style="float:right">
+              <button id="btn-login" href="#" type="submit"  name="_submit" class="btn btn-warning">Connexion  </button>
+
+            </div>
+          </div>
+
+
+          <div class="form-group">
+            <div class="col-md-12 control">
+              <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
+                Nouveau ?
+                <a href="{{ url('flair_user_inscription_organisme') }}">
+                  S'inscrire
+                </a>
+              </div>
+            </div>
+          </div>
         </form>
+      </div>
     </div>
-</div>
+  </div>
 {% endblock %}
