--- a/src/Flair/UserBundle/Resources/views/Security/motdepasseOublie.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Security/motdepasseOublie.html.twig
@@ -1,17 +1,38 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    <div class="inner">
-        <div class="prefix_1">
-            <h2>Mot de passe oublié</h2>
-            <form class="form-horizontal" action="{{ url('flair_user_password_forget') }}" method="post">
+<div class="container">
+  <div class="row">
+      <div class="col-lg-12">
+          <h1 class="page-header">Mot de passe oublié
+          </h1>
+          <ol class="breadcrumb">
+              <li><a href="index.html">Accueil</a>
+              </li>
+              <li class="active">Connexion</li>
+          </ol>
+      </div>
+  </div>
+  <div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-info" >
+      <div class="panel-heading">
+        <div class="panel-title">Mot de passe oublié</div>
+        <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="{{ url('login') }}">Connexion</a></div>
+      </div>
 
-                {{ form_rest(form) }}
+      <div style="padding-top:30px" class="panel-body" >
+  <form class="form-horizontal" action="{{ url('flair_user_password_forget') }}" method="post">
 
-                <div class="controls">
-                    <input type="submit" id="_submit" class="btn orange" name="_submit" value="Envoyer">
-                </div>
-            </form>
-        </div>
+    {{ form_rest(form) }}
+
+    <div class="controls" style="float:right">
+      <input  type="submit" id="_submit" class="btn btn-warning" name="_submit" value="Envoyer">
     </div>
+  </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
