--- a/src/Flair/UserBundle/Resources/views/Security/motdepasseResetSuccess.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Security/motdepasseResetSuccess.html.twig
@@ -1,14 +1,31 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    <div class="inner">
-        <div class="prefix_1">
-            <h2>Re-initialisation du mot de passe</h2>
+<div class="container">
+  <div class="row">
+      <div class="col-lg-12">
+          <h1 class="page-header">Mot de passe oublié
+          </h1>
+          <ol class="breadcrumb">
+              <li><a href="index.html">Accueil</a>
+              </li>
+              <li class="active">Connexion</li>
+          </ol>
+      </div>
+  </div>
+  <div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-info" >
+      <div class="panel-heading">
+      </div>
+          <h2>Re-initialisation du mot de passe</h2>
 
-            <p>
-                Votre mot de passe a été re-initialisée. <br/>
-                Vous pouvez desormais vous connecter avec votre nouveau mot de passe.
-            </p>
+          <p>
+              Votre mot de passe a été re-initialisée. <br/>
+              Vous pouvez desormais vous connecter avec votre nouveau mot de passe.
+          </p>
         </div>
+      </div>
     </div>
+  </div>
+</div>
 {% endblock %}
