--- a/web/css/style_layout_1.css
+++ b/web/css/style_layout_1.css
@@ -1,158 +1,17 @@
 @import url(http://fonts.googleapis.com/css?family=Signika);
-header {
-  height: 110px;
-  padding-top: 40px;
-  position: relative;
-}
-header a {
-  text-decoration: none;
-}
-header .logo {
-  position: absolute;
-  top: 12px;
-  left: 0;
-}
-header.inner {
-  width: 1080px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.button_container {
-  height: 40px;
-  font-family: "Helvetica", sans-serif;
-  font-size: 17px;
-  text-align: right;
-}
-.button_container a.orange,
-.button_container span {
-  margin-right: 40px;
-}
-.button_container span {
-  font-family: "Helvetica Bold", sans-serif;
-  color: black;
-}
-.menu_container {
-  font-family: Signika, sans-serif;
-  font-size: 14px;
-  height: 40px;
-  margin-top: 10px;
-}
-.menu_container ul {
-  list-style-type: none;
-  float: right;
-  margin-right: 5px;
-}
-.menu_container ul li {
-  float: left;
-  display: block;
-  height: 33px;
-  line-height: 33px;
-  width: 130px;
-  text-align: center;
-  background: #eeeeee;
-  border: 1px solid black;
-}
-.menu_container ul li a {
-  color: black;
-}
-.menu_container ul li:hover {
-  background-color: #FFC435;
-}
-.menu_container ul li.current {
-  background: #ff9735;
-}
-.menu_container ul li.first {
-  border-style: solid;
-  border-color: black;
-  border-top-width: 1px;
-  border-left-width: 1px;
-  border-bottom-width: 1px;
-  border-right-width: 0;
-  -webkit-border-top-left-radius: 3px;
-  -moz-border-radius-topleft: 3px;
-  border-top-left-radius: 3px;
-  -webkit-border-bottom-left-radius: 3px;
-  -moz-border-radius-bottomleft: 3px;
-  border-bottom-left-radius: 3px;
-}
-.menu_container ul li.last {
-  border-style: solid;
-  border-color: black;
-  border-top-width: 1px;
-  border-left-width: 0px;
-  border-bottom-width: 1px;
-  border-right-width: 1px;
-  -webkit-border-top-right-radius: 3px;
-  -moz-border-radius-topright: 3px;
-  border-top-right-radius: 3px;
-  -webkit-border-bottom-right-radius: 3px;
-  -moz-border-radius-bottomright: 3px;
-  border-bottom-right-radius: 3px;
-}
-.menu_container ul li.left-border {
-  border-left: 1px solid black;
-}
-footer {
-  position: relative;
-  bottom: 0px;
-  width: 100%;
-  height: 100px;
-  clear: both;
-  background-color: #666666;
-  font-family: Arial, sans-serif;
-  font-size: 13px;
-  color: #ffffff;
-}
-footer .inner {
-  width: 1080px;
-  margin-left: auto;
-  margin-right: auto;
-}
-footer a {
-  text-decoration: none;
-}
-footer .btn {
-  font-size: 13px;
-}
-footer ul {
-  margin-top: 30px;
-  list-style-type: none;
-  height: 40px;
-}
-footer ul li {
-  float: left;
-  display: block;
-  margin-left: 37px;
-  height: 40px;
-  line-height: 40px;
-}
-footer .copyright {
-  float: left;
-}
-footer .footer_menu {
-  float: right;
-}
-footer li {
-  margin-left: 0;
-  font-size: 12px;
-  color: #d2d2d2;
-}
-footer a {
-  color: #d2d2d2;
-}
 .btn {
   border: none;
   padding: 11px 23px;
   border-radius: 3px;
   cursor: pointer;
   color: white;
-  background-color: #666666;
+  font-weight: bold;
+  background-color: #ccc;
   text-decoration: none;
   font-size: 14px;
-  font-family: Helvetica, sans-serif;
 }
 .btn:hover {
-  background-color: rgba(62,57,57,0.9);
+  background-color: #ddd;
 }
 .btn.bold {
   font-weight: bold;
@@ -162,7 +21,9 @@ footer a {
   font-size: 25px;
 }
 .btn.orange {
-  background-color: #ff9735;
+  color: #fff;
+  background-color: #f0ad4e;
+  border-color: #eea236;
 }
 .btn.orange:hover {
   background-color: #FFC435;
@@ -198,372 +59,14 @@ footer a {
 .btn.add span.plus {
   font-size: 20px;
 }
-.btn-delete {
-  width: 90px;
-  height: 30px;
-  text-align: center;
-  background: #666;
-  display: block;
-}
 .btn-reflate {
   width: 90px;
   height: 30px;
   text-align: center;
   border: 1px solid #666;
-  background: #ffa935;
+  background: #eea236;
   color: black;
   margin-bottom: 5px !important;
-}
-.hp-presentation {
-  text-align: center;
-}
-.hp-presentation .simplify-procedures {
-  margin-top: 80px;
-}
-.hp-presentation .discover-dedicated-tools {
-  margin-top: 25px;
-}
-.hp-presentation .discover-dedicated-tools h3 {
-  margin-top: 100px;
-  margin-bottom: 100px;
-  font-size: 1.5em;
-}
-.hp-presentation .free-registration {
-  margin-top: 30px;
-}
-.hp-presentation .hp-process {
-  margin-top: 70px;
-}
-.hp-list {
-  list-style-type: none;
-  float: left;
-  padding-left: 0;
-}
-.hp-list li {
-  font-weight: bold;
-  float: left;
-  width: 150px;
-  height: 50px;
-  padding-left: 60px;
-  display: block;
-  background-repeat: no-repeat;
-}
-.hp-list li.separator {
-  width: 60px;
-  padding-left: 0px;
-  background: url('/images/hp-list-separator.png') no-repeat;
-}
-.hp-first {
-  background-image: url('/images/hp-first.png');
-}
-.hp-second {
-  background-image: url('/images/hp-second.png');
-}
-.hp-third {
-  background-image: url('/images/hp-third.png');
-}
-.hp-fourth {
-  background-image: url('/images/hp-fourth.png');
-}
-.hp-infos {
-  background-color: #E73469;
-  color: white;
-  margin-top: 80px;
-  padding-top: 80px;
-  padding-bottom: 80px;
-}
-.hp-infos h2 {
-  font-weight: normal;
-  font-size: 3em;
-}
-.hp-infos p {
-  font-size: 1.4em;
-  line-height: 1.5em;
-  margin-left: auto;
-  margin-right: auto;
-}
-.hp-bottom {
-  margin-top: 60px;
-  margin-bottom: 20px;
-  text-align: center;
-}
-.hp-faq {
-  width: 750px;
-  margin-left: 200px;
-}
-.hp-faq h2 {
-  font-size: 19px;
-  margin-bottom: 0px;
-}
-.hp-faq p,
-.hp-faq ul {
-  margin-bottom: 40px;
-}
-.td_left {
-  text-align: left;
-}
-.table tbody td a.answer {
-  height: auto;
-  margin-left: 11%;
-}
-.invit {
-  width: 15%;
-}
-.invit a {
-  margin: 9% 0 10% 10%;
-}
-.invit a:hover {
-  background-color: rgba(62,57,57,0.9);
-}
-.serv-list a {
-  margin-left: 30%;
-  text-transform: uppercase;
-}
-.serv-list a:hover {
-  background-color: rgba(62,57,57,0.9);
-}
-.table {
-  text-align: left;
-  width: 1080px;
-  border-collapse: collapse;
-  margin-bottom: 30px;
-  border: 1px solid #666666;
-  box-shadow: 10px 10px 5px rgba(136,136,136,0.16);
-}
-.table tbody th,
-.table tbody td {
-  padding-left: 0;
-}
-.table tbody th.center,
-.table tbody td.center {
-  padding-left: 0px;
-}
-.table tbody td {
-  max-width: 300px;
-}
-.table.results {
-  width: 240px;
-  float: right;
-  margin-right: 1%;
-  font-weight: bold;
-}
-.table.results.res {
-  float: inherit;
-  margin-left: 360px;
-  margin-top: 30px;
-}
-.table.results thead {
-  float: left;
-}
-.table.results thead th {
-  width: 117px;
-  display: block;
-  background: white;
-  border-right: 1px solid #666 !important;
-}
-.table.results thead th:nth-child(even) {
-  background-color: #eeeeee;
-}
-.table.results thead th:nth-child(odd) {
-  background-color: white;
-}
-.table.results tbody {
-  float: right;
-}
-.table.results tbody td {
-  display: block;
-  padding: 15px 10px;
-  width: 79px;
-  height: 16px;
-  border: none;
-  text-align: center;
-  overflow: hidden;
-}
-.table.results tbody td:nth-child(even) {
-  background-color: #eeeeee;
-}
-.table.results tbody td:nth-child(odd) {
-  background-color: white;
-}
-.table thead {
-  background-color: #cccccc;
-  text-transform: uppercase;
-  font-size: 14px;
-  color: black;
-}
-.table thead th {
-  padding: 15px 10px;
-  font-weight: normal;
-  border-right: 1px solid #666666;
-}
-.table thead th:last-child {
-  border-right: 0;
-}
-.table thead .title-doc {
-  padding: 0;
-}
-.table thead .title-doc .sub-menu {
-  width: 30%;
-  font-size: 12px;
-  display: inline-block;
-  padding-top: 5px;
-}
-.table thead span.doc {
-  display: block;
-  width: 100%;
-  border-bottom: 1px solid #666;
-  padding-bottom: 5px;
-}
-.table tbody td {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border-right: 1px solid #666666;
-  font-size: 1.2em;
-  text-align: center;
-}
-.table tbody tdimg {
-  text-align: right;
-}
-.table tbody td:first-child {
-  width: 15%;
-}
-.table tbody td:nth-child(2) {
-  width: 15%;
-}
-.table tbody td:nth-child(3) {
-  width: 20%;
-}
-.table tbody td:nth-child(4) {
-  width: 20%;
-  text-align: left;
-  padding-left: 2%;
-}
-.table tbody td:last-child {
-  width: 15%;
-}
-.table tbody td a.btn-delete,
-.table tbody td a.btn-reflate {
-  text-decoration: none;
-  display: block;
-  line-height: 27px;
-  font-size: 15px;
-}
-.table tbody td a.btn-delete {
-  color: white;
-  padding: 8px 19px;
-}
-.table tbody td a.btn-reflate {
-  color: black;
-  padding: 1px 8px;
-}
-.table tbody td.documents thead {
-  border-bottom: 1px solid #666666;
-}
-.table tbody td.documents .table {
-  width: 100%;
-  margin: 0;
-  border: 0;
-}
-.table tbody td.documents .table tbody td {
-  text-align: center;
-  padding: 10px;
-  border: none;
-}
-.table tbody td.errors input {
-  border: 1px solid red;
-}
-.table tbody.large td {
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-.table tbody.large td span {
-  width: 70px;
-  display: inline-block;
-}
-.table tbody.large td.documents {
-  padding: 0;
-  min-width: 170px;
-}
-.table tbody.large td.documents span {
-  display: inline-block;
-  width: 45px;
-}
-.table tbody td:last-child {
-  border-right: 0;
-}
-.table tbody tr {
-  color: black;
-}
-.table tbody tr .ui-icon-star {
-  float: right;
-  margin-right: 10px;
-  cursor: pointer;
-}
-.table tbody tr a {
-  color: #0095dd;
-}
-.table tbody tr:nth-child(odd) {
-  background-color: #eeeeee;
-}
-.table tbody tr:nth-child(even) {
-  background-color: white;
-}
-.sorting {
-  background: url('/images/sort_both.png') no-repeat center right;
-}
-.sorting_asc {
-  background: url('/images/sort_asc.png') no-repeat center right;
-}
-.sorting_desc {
-  background: url('/images/sort_desc.png') no-repeat center right;
-}
-.sorting_asc_disabled {
-  background: url('/images/sort_asc_disabled.png') no-repeat center right;
-}
-.sorting_desc_disabled {
-  background: url('/images/sort_desc_disabled.png') no-repeat center right;
-}
-table.dataTable thead th:active,
-table.dataTable thead td:active {
-  outline: none;
-}
-table.dataTable thead .sorting,
-table.dataTable thead .sorting_asc,
-table.dataTable thead .sorting_desc {
-  cursor: pointer;
-}
-.flash {
-  padding: 8px 15px;
-  margin-bottom: 20px;
-  color: black;
-  font-size: 15px;
-  font-weight: bold;
-  text-align: center;
-}
-.flash.success {
-  background-color: white;
-  color: black;
-}
-.flash.error {
-  background-color: #ea1c00;
-}
-.flash.warning {
-  background-color: #ff9735;
-}
-.flash.notice {
-  background-color: #ababab;
-}
-.flash.notice a,
-.flash.notice a:visited {
-  color: #666666;
-  font-weight: 700;
-  text-decoration: none;
-}
-.modal {
-  display: none;
-}
-.no-close .ui-dialog-titlebar-close {
-  display: none;
 }
 .pagination a:hover {
   cursor: pointer;
@@ -579,7 +82,7 @@ span .paginate_active {
   font-style: italic;
 }
 .paginate_active {
-  color: #ff9735;
+  color: #f0ad4e;
 }
 .pagination-list {
   width: 170px;
@@ -610,13 +113,9 @@ span .paginate_active {
   margin-left: 10%;
   font-size: 1.4em;
 }
-.form-horizontal {
-  float: left;
-}
 .form-horizontal .control-group {
   margin-bottom: 18px;
   position: relative;
-  *zoom: 1;
 }
 .form-horizontal .control-group.toggleShow {
   padding-left: 200px;
@@ -629,14 +128,6 @@ span .paginate_active {
   margin-left: 116px;
   margin-top: 5px;
 }
-.form-horizontal .control-group:before,
-.form-horizontal .control-group:after {
-  display: table;
-  content: "";
-}
-.form-horizontal .control-group:after {
-  clear: both;
-}
 .form-horizontal .control-group .categories {
   float: left;
   margin-top: 13px;
@@ -645,7 +136,7 @@ span .paginate_active {
 }
 .form-horizontal .control-label {
   text-align: right;
-  width: 190px;
+  width: 196px;
 }
 .form-horizontal .controls {
   margin-left: 200px;
@@ -687,15 +178,23 @@ span .paginate_active {
 .form-horizontal input[type="search"],
 .form-horizontal input[type="tel"],
 .form-horizontal input[type="color"],
+.form-horizontal select,
 .form-horizontal .chzn-single {
-  font-size: 13px;
-  line-height: 18px;
-  border: 1px solid #565555;
-  padding: 8px;
-  height: 17px;
-  width: 230px;
-  vertical-align: middle;
-  display: inline-block;
+  height: 34px;
+  padding: 6px 12px;
+  margin: 2px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 .form-horizontal textarea.large,
 .form-horizontal input[type="text"].large,
@@ -712,6 +211,7 @@ span .paginate_active {
 .form-horizontal input[type="search"].large,
 .form-horizontal input[type="tel"].large,
 .form-horizontal input[type="color"].large,
+.form-horizontal select.large,
 .form-horizontal .chzn-single.large {
   width: 500px;
 }
@@ -730,31 +230,22 @@ span .paginate_active {
 .form-horizontal input[type="search"].bigInput,
 .form-horizontal input[type="tel"].bigInput,
 .form-horizontal input[type="color"].bigInput,
+.form-horizontal select.bigInput,
 .form-horizontal .chzn-single.bigInput {
   height: 90px;
   width: 380px;
 }
-.form-horizontal input[type=checkbox] {
-  margin-top: 15px;
-}
 .form-horizontal input[type=checkbox],
 .form-horizontal input[type=radio] {
-  display: inline-block;
-  margin-right: 5px;
+  margin: 4px 0 0;
+  margin-top: 1px \9;
+  line-height: normal;
 }
 .form-horizontal input[type=submit],
 .form-horizontal button {
   border: 0;
   padding: 8px 15px;
   display: inline-block;
-}
-.form-horizontal select {
-  margin-top: 5px;
-  float: left;
-  height: 30px;
-  border-radius: 0;
-  width: 100%;
-  font-size: 13px;
 }
 .form-horizontal label {
   font-size: 13px;
@@ -790,11 +281,6 @@ body {
   min-height: 100%;
   margin: 0px;
   padding: 0px;
-}
-body {
-  color: #646462;
-  font-size: 13px;
-  font-family: Arial, sans-serif;
 }
 body #global-container {
   margin: 0px;
@@ -868,7 +354,7 @@ body .popup_modify .popup {
   height: 380px;
   background: white;
   margin: 0 auto;
-  top: calc(50% - 270px);
+  top: calc(70% - 270px);
   left: 0;
   right: 0;
   position: absolute;
@@ -879,7 +365,7 @@ body .popup_modify .popup .relativePopupContainer {
   width: 100%;
 }
 body .popup_modify .popup .relativePopupContainer .bandeau {
-  background: #ff9735;
+  background: #f0ad4e;
   color: white;
   text-align: center;
   height: 36px;
@@ -950,92 +436,14 @@ h4 {
 #inscription h2 {
   margin-bottom: 20px;
 }
-.container {
-  min-height: 400px;
-  margin-top: 20px;
-  padding-bottom: 20%;
-}
-.container .inner {
-  width: 1080px;
-  margin-left: auto;
-  margin-right: auto;
-  clear: both;
-}
-.divided {
-  width: 45%;
-  float: left;
-}
-.clearfix {
-  *zoom: 1;
-}
-.clearfix:before,
-.clearfix:after {
-  display: table;
-  content: "";
-}
-.clearfix:after {
-  clear: both;
-}
-.no-border {
-  border: none !important;
-}
-.estimate-summary {
-  margin-bottom: 30px;
-}
-.estimate-summary .request-summary {
-  width: 800px;
-  float: left;
-  margin-bottom: 20px;
-}
-.estimate-summary .request-status {
-  float: right;
-  border-left: 4px solid #646462;
-  padding-left: 15px;
-  padding-right: 10px;
-}
-.estimate-summary .request-status h3 {
-  border-bottom: 1px solid #646462;
-  margin-bottom: 5px;
-}
-.estimate-summary .request-status ul {
-  padding-left: 20px;
-}
-.estimate-summary .request-status li {
-  list-style: none;
-  color: black;
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-.estimate-summary .request-status li.inactive {
-  color: lightgray;
-}
-.estimate-summary .request-status li.active {
-  font-weight: bold;
-  color: orange;
-}
 #login-form div.error {
   color: red;
   margin-left: 200px;
 }
-.category-filter {
-  padding: 10px;
-  border-bottom: 1px solid #646462;
-}
-.listing-consultations,
-.listing-prestataires {
-  width: 1080px;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  -moz-border-top-left-radius: 3px;
-  -moz-border-top-right-radius: 3px;
-}
 .prestataires-filter {
   min-height: 45px;
   padding: 24px 2%;
-  background: #cccccc;
   overflow: auto;
-  width: 96%;
-  box-shadow: 10px 10px 5px rgba(136,136,136,0.16);
 }
 .prestataires-filter .prices {
   margin-right: 24px;
@@ -1083,10 +491,6 @@ h4 {
 .prestataires-filter .filter .end-date {
   margin-top: 10px;
 }
-.prestataires-filter input[type=submit] {
-  margin-top: -5px;
-  float: right;
-}
 .left-filters {
   float: left;
   margin-top: 5px;
@@ -1124,7 +528,7 @@ h2.title {
   padding: 8px 0 8px 15px;
 }
 h2.title.orange {
-  background-color: #ff9735;
+  background-color: #f0ad4e;
 }
 h2.title.grey {
   background-color: #666666;
@@ -1182,7 +586,7 @@ h2.title.grey {
 }
 .line-show span.title {
   width: 110px;
-  color: #ffa935;
+  color: #eea236;
   margin-left: 0;
   text-align: right;
   font-weight: bold;
@@ -1239,23 +643,6 @@ h2.title.grey {
 .list-answers {
   margin-bottom: 60px;
 }
-input[type="text"],
-input[type="email"],
-input[type="password"],
-input[type=number] {
-  border: 1px solid #565555;
-  padding: 8px;
-  margin: 0;
-}
-.ui-datepicker-trigger {
-  margin-left: 8px;
-}
-.inline-row {
-  float: left;
-}
-.inline-row label {
-  display: block;
-}
 .organism-information {
   margin-top: 40px;
 }
@@ -1291,7 +678,7 @@ input[type=number] {
   float: left;
   width: 42%;
   margin-left: 3%;
-  background-color: #ff9735;
+  background-color: #f0ad4e;
   color: #fff;
   padding: 2%;
 }
@@ -1299,7 +686,7 @@ input[type=number] {
   font-size: 3em;
 }
 .presta a {
-  color: #ff9735;
+  color: #f0ad4e;
 }
 .presta .band {
   background: url('/images/bg_presta.jpg') no-repeat;
@@ -1320,7 +707,7 @@ input[type=number] {
 .insc_prest {
   width: 100%;
   float: left;
-  background-color: #ff9735;
+  background-color: #f0ad4e;
   color: #fff;
   padding: 2%;
   margin-bottom: 5%;
@@ -1329,7 +716,7 @@ input[type=number] {
   font-size: 3em;
 }
 .insc_prest a {
-  color: #ff9735;
+  color: #f0ad4e;
 }
 .insc_prest .band {
   background: url('/images/bg_presta.jpg') no-repeat;
@@ -1375,7 +762,7 @@ input[type=number] {
 }
 .title-table {
   float: left;
-  background: #ff9735;
+  background: #f0ad4e;
   height: 48px;
   line-height: 49px;
   overflow: hidden;
@@ -1403,7 +790,7 @@ input[type=number] {
   position: absolute;
   left: 460px;
   top: -12px;
-  background: #ff9735;
+  background: #f0ad4e;
   -webkit-transform: rotate(25deg);
   -moz-transform: rotate(25deg);
   border-radius: 10px;
@@ -1478,7 +865,7 @@ input[type="text"].search {
   font-weight: bold;
   cursor: default;
   color: black;
-  background: #ff9735;
+  background: #f0ad4e;
 }
 .menu-nav .item .step {
   position: absolute;
@@ -1657,7 +1044,6 @@ input[type="text"].search {
   color: black;
   height: 56px;
   line-height: 56px;
-  background: #dddddd;
   cursor: pointer;
   text-decoration: none;
 }
@@ -1697,7 +1083,7 @@ input[type="text"].search {
   text-decoration: none;
 }
 .consultation-content .sub-menu .item.active {
-  background: #ff9735;
+  background: #f0ad4e;
   cursor: default;
 }
 .consultation-content .sub-menu .item:last-child {
